--- a/templates/tpl_modified_nova/stylesheet.css
+++ b/templates/tpl_modified_nova/stylesheet.css
@@ -1486,23 +1486,64 @@ label  {
   font-size: 18px;
 }
 
-.field_eye {
-  position:absolute;
-  bottom: 5px;
-  right:0px;
-  width:44px;
+.field_password {
+  display:flex;
+  align-items:center;
+  background-color:#f2f2f2;
+  border-color: #d9d9d9;
+  border-style: solid;
+  border-width: 1px;
+  transition: all 0.3s ease-in-out;
+  color: #555;
+  border-radius: 4px;
   height:44px;
-  line-height:46px;
+}
+.field_password:hover {
+  background-color:#f2f2f2;
+  border-color: #999;
+  color: #555;
+}
+.field_password:focus-within {
+  background-color:#fff;
+  border-color: #999;
+  color: #333;
+  outline: 0 none;
+}
+.field_password input[type=text], 
+.field_password input[type=password] {
+  height:42px;
+  padding: 10px 11px 10px 11px;
+  background:transparent;
+  border:none;
+}
+.field_password input[type=text]:hover,
+.field_password input[type=password]:hover {
+  background:transparent;
+  border:none;
+}
+.field_password input[type=text]:focus,
+.field_password input[type=password]:focus {
+  background:transparent;
+  border:none;
+}
+.field_input {
+  flex:1;
+}
+.field_eye {
+  width:42px;
+  height:42px;
+  line-height:44px;
   text-align:center;
-  cursor:pointer;
   display:block;
   font-size:20px;
 }
 .field_eye .fa-eye {
   color:#ccc;
+  cursor:pointer;
 }
 .field_eye .fa-eye-slash {
   color:#555;
+  cursor:pointer;
 }
 
 .field_text {
@@ -2151,6 +2192,9 @@ input[type=text]:focus, input[type=password]:focus, input[type=email]:focus, inp
 .toggle_account #loginbox {
   border-top: 1px solid #ddd;
   padding: 10px 0 10px 0;
+}
+.toggle_account #loginbox .field_password {
+  background-color:#fff;
 }
 .toggle_account #loginbox input[type=text],
 .toggle_account #loginbox input[type=password],
